fix: replace removeLast with index removal